[metadata]
name = biocontainersci
version = 0.0.1
author = Olivier Sallou
author_email = olivier.sallou@irisa.fr
description = Biocontainers CI package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osallou/biocontainersci
project_urls =
    Bug Tracker = https://github.com/osallou/biocontainersci/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  biocontainers-build = biocontainersci.main:run
